# horizon

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_PROCESSING_AGREEMENT.md  LEGAL.md  NOTICE  PRIVACY_POLICY.md  README.md  SECURITY.md  TERMS_OF_SERVICE.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
deploy/: build.sh  wsgi.py
deploy/docker/: Dockerfile  docker-compose.yml
docs/: README.md  index.html
docs/content/: naming-the-category-conversation-dynamics-monitoring.md  why-every-production-agent-needs-conversation-dynamics-monitoring.md
docs/cursor-rules/: horizon-monitor.mdc
docs/integrations/: CLAUDE_CODE.md  CLAUDE_DESKTOP.md  COPILOT.md  CURSOR.md  README.md
docs/product/: THCP_FIDELITY_MONITOR_PRD.md
docs/research/: TRANS_HORIZON_COMMUNICATION_HUMAN_AI_THEORETICAL_FRAMEWORK.md  market-demand.md
docs/reviews/: DESIGN_FIXES_redteam_remediation.md  E2E_REVIEW.md  V0_2_0_EVIDENCE.md  embedding_stability.json  heuristic_baseline.json  interventional_ab_demo.json  leading_indicator.json  mcp_live_session_2026_05_06.json  throughput.json
docs/site/: README.md  index.html
docs/spec/: HORIZON_TECH_SPEC.md  horizon_intent.yaml
examples/: anthropic_real_agent_e2e.py  langchain_real_agent_e2e.py  openai_agents_sdk_e2e.py  openai_real_agent_e2e.py  raw_framework_agnostic_e2e.py
scripts/: adapt_external_corpus.py  agent_demo_with_mcp.py  build_validation_corpus.py  measure_embedding_stability.py  measure_heuristic_baseline.py  measure_leading_indicator.py  measure_throughput.py  run_interventional_ab.py  validate.py
src/horizon/: __init__.py  config.py  grounding.py  models.py  monitor.py  session.py  validate.py
src/horizon/mcp/: auth.py  (+3 more)
tests/: conftest.py
tests/e2e/: __init__.py  test_anthropic_wrap_e2e.py  test_langchain_callback_e2e.py  test_mcp_fastmcp_e2e.py  test_mcp_server_e2e.py  test_openai_agents_sdk_e2e.py  test_openai_wrap_e2e.py  test_raw_strings_e2e.py
(+76 files in other folders)
